added span info

--- a/smpc_extraction-hackathon.ipynb
+++ b/smpc_extraction-hackathon.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "ae4041e2-e908-4e65-80f9-07ee2d12e9df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kjwh581/opt/anaconda3/lib/python3.9/site-packages/pandas/core/computation/expressions.py:21: UserWarning: Pandas requires version '2.8.0' or newer of 'numexpr' (version '2.7.3' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "/Users/kjwh581/opt/anaconda3/lib/python3.9/site-packages/pandas/core/arrays/masked.py:62: UserWarning: Pandas requires version '1.3.4' or newer of 'bottleneck' (version '1.3.2' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import re\n",
@@ -17,8 +28,6 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from flashtext import KeywordProcessor\n",
-    "from ftlangdetect import detect\n",
-    "from langcodes import Language\n",
     "from typing import Union\n",
     "\n",
     "cssutils.log.setLevel(logging.CRITICAL)"
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "c7fec8d9-ef61-4e9f-a0e2-d0f6d847cfac",
    "metadata": {},
    "outputs": [],
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "id": "77c4bb0b-163b-4f78-9ce5-014cc62bef9d",
    "metadata": {},
    "outputs": [],
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 4,
    "id": "9b401dff-20ee-4bd5-abe4-575d9469a79b",
    "metadata": {},
    "outputs": [],
@@ -221,16 +230,12 @@
     "        sections[section][\"content\"] = content\n",
     "        all_contents[section] = content\n",
     "\n",
-    "    return sections\n",
-    "\n",
-    "def detect_language(text):\n",
-    "    result = detect(text=text, low_memory=True)\n",
-    "    return Language.get(result[\"lang\"]).display_name()"
+    "    return sections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "187e5de3-a968-4406-9211-a55cbe1d2b0f",
    "metadata": {},
    "outputs": [
@@ -238,7 +243,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 12/12 [00:11<00:00,  1.03it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 12/12 [00:13<00:00,  1.14s/it]\n"
      ]
     }
    ],
@@ -413,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "dbda0c0e-04c5-42eb-9b45-eae46ba6a629",
    "metadata": {},
    "outputs": [],
@@ -428,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "6cbf5599-1efa-4dca-b96c-8585a63a473f",
    "metadata": {},
    "outputs": [],
@@ -484,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "62ecaa2a-1b1c-4640-b7bf-4937c9cb5bfd",
    "metadata": {},
    "outputs": [
@@ -492,7 +497,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|                                                                                                                                                                               | 0/4 [00:00<?, ?it/s]"
+      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 4/4 [10:35<00:00, 158.87s/it]\n"
      ]
     }
    ],
@@ -512,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4863b588-de96-430b-8eea-54af15190f81",
    "metadata": {},
    "outputs": [],
@@ -524,15 +529,15 @@
     "            continue\n",
     "\n",
     "        for ontology, tagger in taggers.items():\n",
-    "            entities = tagger.extract_keywords(value)\n",
-    "            output = [(entity, labels[ontology][entity]) for entity in entities]\n",
+    "            entities = tagger.extract_keywords(value, span_info=True)\n",
+    "            output = [(entity[0], labels[ontology][entity[0]], entity[1], entity[2]) for entity in entities]\n",
     "            extraction[f\"{ontology}.{key}\"] = output\n",
     "    return extraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1fb2775c-6607-4ce1-bf06-d77c904bc4d9",
    "metadata": {},
    "outputs": [],
@@ -549,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "998c8a02-e754-4816-a485-5c2e3c6f9c6f",
    "metadata": {},
    "outputs": [],
